# agent-cli

./: .env.example  .gitignore  .pre-commit-config.yaml  BEADS_SUPER_INIT_DESIGN.md  BEAD_PILL_UI_DESIGN.md  BEAUTIFICATION_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CLI_REFACTORING_SUMMARY.md  CODE_OF_CONDUCT.md  CODE_PUPPY_INSPIRATION.md  COMPLETION_REPORT.md  CONFIG_GUIDE.md  CONTRIBUTING.md  CURRENT_STATE_AND_V2_PLAN.md  CUSTOM_BEAD_CREATION_DESIGN.md  DEVELOPMENT.md  DEVELOPMENT_PLAN.md  FINAL_STATUS.md  FIXES_APPLIED.md  FOR_TOMORROW.md  GITHUB_SETUP.md  INIT_SUPERPOWER_DESIGN.md  INSTALLATION_GUIDE.md  MENU_CONSISTENCY.md  MENU_ISSUE.md  Makefile  ONBOARDING_IMPROVEMENTS.md  OPEN_SOURCE_PLAN.md  PERSONALITY_BEADS_DESIGN.md  PROJECT_STATUS.md  QUICK_START_ROADMAP.md  README.md  REMAINING_PHASES.md  ROADMAP.md  SECURITY.md  TESTING_UI_CHANGES.md  UI_DESIGN_TWEAKS.md  agent  check_setup.sh  (+16 more)
.github/workflows/: lint.yml  test.yml
agent_cli/: __init__.py  beads.py  cli.py  cli_old_backup.py  command_registry.py  config.py  constants.py  context_manager.py  export_manager.py  git_hooks.py  history_manager.py  interactive_commands.py  interactive_onboarding.py  interactive_select.py  model_factory.py  models.json  ollama_manager.py  onboarding.py  personality_beads.py  project_config.py  project_detector.py  session_manager.py  templates.py  token_counter.py  ui.py  utils.py  validators.py
agent_cli/agents/: __init__.py  anthropic_agent.py  base.py  factory.py  google_agent.py  ollama_agent.py  openai_agent.py
agent_cli/beads_library/personalities/base/: analytical.yaml  creative.yaml  helpful.yaml  supportive.yaml  teaching.yaml
agent_cli/beads_library/personalities/domain/: data-scientist.yaml  devops-expert.yaml  frontend-dev.yaml  javascript-expert.yaml  python-expert.yaml  rust-expert.yaml
agent_cli/beads_library/personalities/modifiers/: concise.yaml  direct.yaml  humorous.yaml  patient.yaml  verbose.yaml
agent_cli/beads_library/personalities/professional/: casual.yaml  executive.yaml  formal.yaml  friendly.yaml  technical.yaml
agent_cli/commands/: __init__.py  bead.py  config.py  constants.py  context.py  core.py  session.py  utility.py
docs/: Architecture.md  Command-Reference.md  Development-Phases.md  GEMINI_BEADS_ASSESSMENT.md  Installation.md  PROJECT_SUMMARY.md  Quick-Start.md  WIKI_HOME.md  WIKI_SETUP.md  WIKI_UPLOAD_GUIDE.md
tests/: __init__.py
tests/integration/: test_agents.py
tests/unit/: test_command_registry.py  test_config.py  test_history_manager.py  test_model_factory.py  test_session_manager.py
